corpus/defer-statement.txt
===============
Defer statement
===============

@defer {
  <span>Complex element</span>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (start_tag
        (tag_name)
      )
      (text)
      (end_tag
        (tag_name)
      )
    )
    (defer_end_expression)
  )
)

==================
Defer with trigger
==================

@defer (on viewport) {
  <calendar-cmp/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
      (defer_trigger
        (defer_trigger_condition
          (special_keyword)
          (identifier)
        )
      )
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (defer_end_expression)
  )
)

============================
Defer with multiple triggers
============================

@defer (on viewport; on timer(5s)) {
  <calendar-cmp/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
      (defer_trigger
        (defer_trigger_condition
          (special_keyword)
          (identifier)
        )
        (defer_trigger_condition
          (special_keyword)
          (call_expression
            (identifier)
            (arguments
              (identifier)
            )
          )
        )
      )
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (defer_end_expression)
  )
)

===================
Defer with prefetch
===================

@defer (on interaction; prefetch on idle) {
  <calendar-cmp/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
      (defer_trigger
        (defer_trigger_condition
          (special_keyword)
          (identifier)
        )
        (defer_trigger_condition
          (prefetch_keyword)
          (special_keyword)
          (identifier)
        )
      )
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (defer_end_expression)
  )
)

==============================
Defer with conditional trigger
==============================

@defer (when users.length > 0) {
  <calendar-cmp/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
      (defer_trigger
        (defer_trigger_condition
          (special_keyword)
          (binary_expression
            (member_expression
              (identifier)
              (identifier)
            )
            (identifier)
          )
        )
      )
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (defer_end_expression)
  )
)

===========
Placeholder
===========

@defer {
  <large-component/>
} @placeholder {
  <small-component/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (placeholder_statement
      (placeholder_expression
        (control_keyword)
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (defer_end_expression)
    )
  )
)

========================
Placeholder with minimum
========================

@defer {
  <large-component/>
} @placeholder (minimum 400ms) {
  <small-component/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (placeholder_statement
      (placeholder_expression
        (control_keyword)
        (placeholder_minimum
          (special_keyword)
          (number)
          (unit)
        )
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (defer_end_expression)
    )
  )
)

=======
Loading
=======

@defer {
  <large-component/>
} @loading {
  <loading-spinner/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (loading_statement
      (loading_expression
        (control_keyword)
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (defer_end_expression)
    )
  )
)

====================
Loading with minimum
====================

@defer {
  <large-component/>
} @loading (minimum 1s) {
  <loading-spinner/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (loading_statement
      (loading_expression
        (control_keyword)
        (loading_condition
          (special_keyword)
          (number)
          (unit)
        )
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (defer_end_expression)
    )
  )
)

==================
Loading with after
==================

@defer {
  <large-component/>
} @loading (after 1s) {
  <loading-spinner/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (loading_statement
      (loading_expression
        (control_keyword)
        (loading_condition
          (special_keyword)
          (number)
          (unit)
        )
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (defer_end_expression)
    )
  )
)

=========================
Loading minimum and after
=========================

@defer {
  <large-component/>
} @loading (after 1s; minimum 1s) {
  <loading-spinner/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (loading_statement
      (loading_expression
        (control_keyword)
        (loading_condition
          (special_keyword)
          (number)
          (unit)
          (special_keyword)
          (number)
          (unit)
        )
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (defer_end_expression)
    )
  )
)

=====
Error
=====

@defer {
  <large-component/>
} @error {
  <error-message/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (error_statement
      (error_expression
        (control_keyword)
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (defer_end_expression)
    )
  )
)

===============================
Defer-placeholder-loading-error
===============================

@defer (on viewport) {
  <calendar-cmp/>
} @placeholder (minimum 100ms) {
  <small-component/>
} @loading (after 100s; minimum 200ms){
  <loading-spinner/>
} @error {
  <error-message/>
}

---

(fragment
  (defer_statement
    (defer_start_expression
      (control_keyword)
      (defer_trigger
        (defer_trigger_condition
          (special_keyword)
          (identifier)
        )
      )
    )
    (element
      (self_closing_tag
        (tag_name)
      )
    )
    (placeholder_statement
      (placeholder_expression
        (control_keyword)
        (placeholder_minimum
          (special_keyword)
          (number)
          (unit)
        )
      )
      (element
        (self_closing_tag
          (tag_name)
        )
      )
      (loading_statement
        (loading_expression
          (control_keyword)
          (loading_condition
            (special_keyword)
            (number)
            (unit)
            (special_keyword)
            (number)
            (unit)
          )
        )
        (element
          (self_closing_tag
            (tag_name)
          )
        )
        (error_statement
          (error_expression
            (control_keyword)
          )
          (element
            (self_closing_tag
              (tag_name)
            )
          )
          (defer_end_expression)
        )
      )
    )
  )
)
